--- a/周思敏_招商宇宙.html
+++ b/周思敏_招商宇宙.html
@@ -3,21 +3,16 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>北京邮电大学网上服务大厅</title>
-    <link rel="stylesheet" type="text/css" href="./北京邮电大学网上服务大厅_files/reset.css">
-    <link rel="stylesheet" href="./北京邮电大学网上服务大厅_files/pannellum.css">
-    <link rel="stylesheet" type="text/css" href="./北京邮电大学网上服务大厅_files/index.css">
+    <title>周思敏_招商宇宙</title>
+    <link rel="stylesheet" type="text/css" href="./周思敏_招商宇宙/reset.css">
+    <link rel="stylesheet" href="./周思敏_招商宇宙/pannellum.css">
+    <link rel="stylesheet" type="text/css" href="./周思敏_招商宇宙/index.css">
   </head>
   <body>
-    <div id="panorama" class="pnlm-container" tabindex="0"><div class="pnlm-ui pnlm-grab"><div class="pnlm-dragfix"></div><span class="pnlm-about-msg" style="left: 414px; top: 106px; display: none; opacity: 0;"><a href="https://pannellum.org/" target="_blank">Pannellum</a> 2.5.2</span><div class="pnlm-sprite pnlm-hot-spot-debug-indicator" style="display: none;"></div><div class="pnlm-panorama-info" style="display: inline;"><div class="pnlm-title-box"></div><div class="pnlm-author-box">by 北京邮电大学</div></div><div class="pnlm-load-box" style="display: none;"><p>Loading...</p><div class="pnlm-lbox" style="display: block;"><div class="pnlm-loading"></div></div><div class="pnlm-lbar" style="display: none;"><div class="pnlm-lbar-fill"></div></div><p class="pnlm-lmsg"></p></div><div class="pnlm-error-msg pnlm-info-box"></div><div class="pnlm-controls-container"><div class="pnlm-zoom-controls pnlm-controls" style="display: block;"><div class="pnlm-zoom-in pnlm-sprite pnlm-control"></div><div class="pnlm-zoom-out pnlm-sprite pnlm-control"></div></div><div class="pnlm-fullscreen-toggle-button pnlm-sprite pnlm-fullscreen-toggle-button-inactive pnlm-controls pnlm-control" style="display: block;"></div></div><div class="pnlm-load-button" style="display: none;"><p>Click to<br>Load<br>Panorama</p></div><div class="pnlm-compass pnlm-controls pnlm-control" style="display: none;"></div></div><div class="pnlm-render-container"><canvas width="1992" style="height: 100%; width: 100%;" height="1414"></canvas><div class="pnlm-hotspot-base pnlm-hotspot pnlm-sprite pnlm-scene pnlm-pointer" style="visibility: visible; transform: translate(464.823px, 428.012px) translateZ(9999px) rotate(0deg);"></div><div class="pnlm-hotspot-base pnlm-hotspot pnlm-sprite pnlm-scene pnlm-pointer" style="visibility: hidden;"></div></div></div>
-    <!-- <div class="right-top-menu">
-      <h2>窗口搜索</h2>
-    </div> -->
+    <div id="panorama" class="pnlm-container" tabindex="0"><div class="pnlm-ui pnlm-grab"><div class="pnlm-dragfix"></div><span class="pnlm-about-msg" style="left: 414px; top: 106px; display: none; opacity: 0;"><a href="https://pannellum.org/" target="_blank">Pannellum</a> 2.5.2</span><div class="pnlm-sprite pnlm-hot-spot-debug-indicator" style="display: none;"></div><div class="pnlm-panorama-info" style="display: inline;"><div class="pnlm-title-box"></div></div><div class="pnlm-load-box" style="display: none;"><p>Loading...</p><div class="pnlm-lbox" style="display: block;"><div class="pnlm-loading"></div></div><div class="pnlm-lbar" style="display: none;"><div class="pnlm-lbar-fill"></div></div><p class="pnlm-lmsg"></p></div><div class="pnlm-error-msg pnlm-info-box"></div><div class="pnlm-controls-container"><div class="pnlm-zoom-controls pnlm-controls" style="display: block;"><div class="pnlm-zoom-in pnlm-sprite pnlm-control"></div><div class="pnlm-zoom-out pnlm-sprite pnlm-control"></div></div><div class="pnlm-fullscreen-toggle-button pnlm-sprite pnlm-fullscreen-toggle-button-inactive pnlm-controls pnlm-control" style="display: block;"></div></div><div class="pnlm-load-button" style="display: none;"><p>Click to<br>Load<br>Panorama</p></div><div class="pnlm-compass pnlm-controls pnlm-control" style="display: none;"></div></div><div class="pnlm-render-container"><canvas width="1992" style="height: 100%; width: 100%;" height="1414"></canvas><div class="pnlm-hotspot-base pnlm-hotspot pnlm-sprite pnlm-scene pnlm-pointer" style="visibility: visible; transform: translate(464.823px, 428.012px) translateZ(9999px) rotate(0deg);"></div><div class="pnlm-hotspot-base pnlm-hotspot pnlm-sprite pnlm-scene pnlm-pointer" style="visibility: hidden;"></div></div></div>
     <div class="menu">
-      <div class="item item1">
-        <span>
-          窗口搜索
-        </span>
+      <div class="item item2">
+        <span>窗口搜索</span>
       </div>
       <div class="item item2">
         <span>党团服务</span>
@@ -29,9 +24,9 @@
           <!--  <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=358">对外新闻宣传发布申报</a>  -->
           <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=358">校主页新闻及各媒体平台发布审批表</a>
           <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=334">事业单位法人证书领用申请表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=338">北京邮电大学法律服务申请表</a>
+          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=338">招商银行法律服务申请表</a>
           <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=382">处级干部请假</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=343">北京邮电大学合同审批表</a>
+          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=343">招商银行合同审批表</a>
         </div>
       </div>
       <div class="item item3">
@@ -135,15 +130,14 @@
         </div>
       </div>
     </div>
-<!--    <div style="color: white;left: auto;right: 40px;bottom: 5px;top: auto;position: absolute;background-color: rgba(0,0,0,0.7);z-index:9999;font-size: 16px;display: table;padding-left: 15px;padding-right: 10px;padding-top:3px;padding-bottom:3px;border-radius: 3px;"><a href="http://10.3.55.30/seeyon/main.do?method=main" target="_blank">旧版入口&gt;&gt;&gt;</a></div>
--->
-    <script type="text/javascript" src="./北京邮电大学网上服务大厅_files/pannellum-1029.js"></script>
-    <script src="./北京邮电大学网上服务大厅_files/jquery-3.5.1.min.js" type="text/javascript" charset="utf-8"></script>
+
+    <script type="text/javascript" src="./周思敏_招商宇宙/pannellum-1029.js"></script>
+    <script src="./周思敏_招商宇宙/jquery-3.5.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script>
       //pc
-      var scene1Pic = "image/12.jpeg";
-      var scene2Pic = "image/12.jpeg";
-      var scene3Pic = "image/12.jpeg";
+      var scene1Pic = "image/1.jpeg";
+      var scene2Pic = "image/2.jpeg";
+      var scene3Pic = "image/3.jpeg";
       var panoramaHfov = 100; //景深
       var panoramaHfov3 = 110; //景深
       var maxHfov = 110; //最大景深
@@ -197,7 +191,7 @@
 	      viewer = pannellum.viewer('panorama', {
 	        "default": {
 	          "firstScene": "scene1",
-	          "author": "北京邮电大学",
+	          "author": "周思敏",
 	          "sceneFadeDuration": 1000,
 	          "autoLoad": true,
 	          "minPitch": -45,
@@ -207,7 +201,7 @@
 	        },
 	        "scenes": {
 	          "scene1": {
-	            // "title": "场景1",
+	            "title": "网点大门",
 	            "hfov": panoramaHfov,
 	            "pitch": panoramaPitch,
 	            "yaw": 0,
@@ -218,15 +212,15 @@
 	              "yaw": 0,
 	              "targetHfov": panoramaHfov,
 	              "type": "scene",
-	              // "text": "走到这里",
+	              "text": "走到柜台",
 	              "sceneId": "scene2"
-	            }, {
+	            }/**, {
 	              "pitch": -20,
 	              "yaw": 0,
 	              "type": "info",
 	              "URL": "https://app.bupt.edu.cn/uc/api/oauth/index?redirect=https://service.bupt.edu.cn/api/login/cloud-school?redirect_url=http://service.bupt.edu.cn/v2/m_site/m_index&appid=200200515155124299",
 	              "cssClass": "tomain"
-	            }/**, {
+	            }, {
 	              "pitch": -22,
 	              "yaw": 0,
 	              "type": "info",
@@ -236,7 +230,7 @@
 	            }**/]
 	          },
 	          "scene2": {
-	            // "title": "场景2",
+	            "title": "网点柜台",
 	            "pitch": panoramaPitch,
 	            "hfov": panoramaHfov,
 	            "yaw": 0,
@@ -246,7 +240,7 @@
 	              "pitch": -15,
 	              "yaw": 0,
 	              "type": "scene",
-	              // "text": "走到这里",
+	              "text": "再往里走",
 	              "sceneId": "scene3",
 	              "targetYaw": 180,
 	              "targetPitch": panoramaPitch,
@@ -255,7 +249,7 @@
 	              "pitch": -10,
 	              "yaw": -180,
 	              "type": "scene",
-	              // "text": "回到前台",
+	              "text": "回到大门",
 	              "sceneId": "scene1",
 	              "targetYaw": 180,
 	              // "targetPitch": 0,
@@ -263,7 +257,7 @@
 	            }]
 	          },
 	          "scene3": {
-	            // "title": "场景3",
+	            "title": "网点内部",
 	            "pitch": panoramaPitch,
 	            "hfov": panoramaHfov3,
 	            "yaw": 0,
@@ -273,7 +267,7 @@
 	              "pitch": -20,
 	              "yaw": 0,
 	              "type": "scene",
-	              // "text": "场景2",
+	              "text": "回到柜台",
 	              "sceneId": "scene2",
 	              "targetYaw": 180,
 	              // "targetPitch": -10,
@@ -282,7 +276,7 @@
 	              "pitch": -7,
 	              "yaw": 0,
 	              "type": "scene",
-	              // "text": "场景1",
+	              "text": "网点大门",
 	              "sceneId": "scene1",
 	              "targetYaw": 180,
 	              // "targetPitch": -10,
@@ -295,7 +289,7 @@
 	     viewer = pannellum.viewer('panorama', {
 	        "default": {
 	          "firstScene": "scene1",
-	          "author": "北京邮电大学",
+	          "author": "周思敏",
 	          "sceneFadeDuration": 1000,
 	          "autoLoad": true,
 	          "minPitch": -45,
@@ -305,7 +299,7 @@
 	        },
 	        "scenes": {
 	          "scene1": {
-	            // "title": "场景1",
+	            "title": "网点大门",
 	            "hfov": panoramaHfov,
 	            "pitch": panoramaPitch,
 	            "yaw": 0,
@@ -316,15 +310,15 @@
 	              "yaw": 0,
 	              "targetHfov": panoramaHfov,
 	              "type": "scene",
-	              // "text": "走到这里",
+	              "text": "走进柜台",
 	              "sceneId": "scene2"
-	            }, {
+	            }/**, {
 	              "pitch": -20,
 	              "yaw": 0,
 	              "type": "info",
 	              "URL":  "https://service.bupt.edu.cn/v2/site/index",
 	              "cssClass": "tomain"
-	            }/**, {
+	            }, {
 	              "pitch": -22,
 	              "yaw": 0,
 	              "type": "info",
@@ -334,7 +328,7 @@
 	            }**/]
 	          },
 	          "scene2": {
-	            // "title": "场景2",
+	            "title": "网点柜台",
 	            "pitch": panoramaPitch,
 	            "hfov": panoramaHfov,
 	            "yaw": 0,
@@ -344,7 +338,7 @@
 	              "pitch": -15,
 	              "yaw": 0,
 	              "type": "scene",
-	              // "text": "走到这里",
+	              "text": "再往里走",
 	              "sceneId": "scene3",
 	              "targetYaw": 180,
 	              "targetPitch": panoramaPitch,
@@ -353,7 +347,7 @@
 	              "pitch": -10,
 	              "yaw": -180,
 	              "type": "scene",
-	              // "text": "回到前台",
+	              "text": "回到大门",
 	              "sceneId": "scene1",
 	              "targetYaw": 180,
 	              // "targetPitch": 0,
@@ -361,7 +355,7 @@
 	            }]
 	          },
 	          "scene3": {
-	            // "title": "场景3",
+	            "title": "网点内部",
 	            "pitch": panoramaPitch,
 	            "hfov": panoramaHfov3,
 	            "yaw": 0,
@@ -371,7 +365,7 @@
 	              "pitch": -20,
 	              "yaw": 0,
 	              "type": "scene",
-	              // "text": "场景2",
+	              "text": "回到柜台",
 	              "sceneId": "scene2",
 	              "targetYaw": 180,
 	              // "targetPitch": -10,
@@ -380,7 +374,7 @@
 	              "pitch": -7,
 	              "yaw": 0,
 	              "type": "scene",
-	              // "text": "场景1",
+	              "text": "回到入口",
 	              "sceneId": "scene1",
 	              "targetYaw": 180,
 	              // "targetPitch": -10,
@@ -391,9 +385,4 @@
 	      });
 	    }
     </script>
-
-  
-
-
-
 </body></html>
