--- a/ZhouSiMin.html
+++ b/ZhouSiMin.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0024)https://3dg.bupt.edu.cn/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>周思敏_招商宇宙</title>
     <link rel="stylesheet" type="text/css" href="./周思敏_招商宇宙/reset.css">
@@ -11,94 +9,46 @@
   <body>
     <div id="panorama" class="pnlm-container" tabindex="0"><div class="pnlm-ui pnlm-grab"><div class="pnlm-dragfix"></div><span class="pnlm-about-msg" style="left: 414px; top: 106px; display: none; opacity: 0;"><a href="https://pannellum.org/" target="_blank">Pannellum</a> 2.5.2</span><div class="pnlm-sprite pnlm-hot-spot-debug-indicator" style="display: none;"></div><div class="pnlm-panorama-info" style="display: inline;"><div class="pnlm-title-box"></div></div><div class="pnlm-load-box" style="display: none;"><p>Loading...</p><div class="pnlm-lbox" style="display: block;"><div class="pnlm-loading"></div></div><div class="pnlm-lbar" style="display: none;"><div class="pnlm-lbar-fill"></div></div><p class="pnlm-lmsg"></p></div><div class="pnlm-error-msg pnlm-info-box"></div><div class="pnlm-controls-container"><div class="pnlm-zoom-controls pnlm-controls" style="display: block;"><div class="pnlm-zoom-in pnlm-sprite pnlm-control"></div><div class="pnlm-zoom-out pnlm-sprite pnlm-control"></div></div><div class="pnlm-fullscreen-toggle-button pnlm-sprite pnlm-fullscreen-toggle-button-inactive pnlm-controls pnlm-control" style="display: block;"></div></div><div class="pnlm-load-button" style="display: none;"><p>Click to<br>Load<br>Panorama</p></div><div class="pnlm-compass pnlm-controls pnlm-control" style="display: none;"></div></div><div class="pnlm-render-container"><canvas width="1992" style="height: 100%; width: 100%;" height="1414"></canvas><div class="pnlm-hotspot-base pnlm-hotspot pnlm-sprite pnlm-scene pnlm-pointer" style="visibility: visible; transform: translate(464.823px, 428.012px) translateZ(9999px) rotate(0deg);"></div><div class="pnlm-hotspot-base pnlm-hotspot pnlm-sprite pnlm-scene pnlm-pointer" style="visibility: hidden;"></div></div></div>
     <div class="menu">
-      <div class="item item2">
-        <span>窗口搜索</span>
+      <div>
+        <span></span>
       </div>
-      <div class="item item2">
+      
+	  <div class="item item2">
         <span>党团服务</span>
         <div class="link">
-          <!-- <h3>办事点我</h3> -->
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=320">用印申请表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=318">OA开通权限申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=361">长顺矿泉水使用申请表</a>
-          <!--  <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=358">对外新闻宣传发布申报</a>  -->
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=358">校主页新闻及各媒体平台发布审批表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=334">事业单位法人证书领用申请表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=338">招商银行法律服务申请表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=382">处级干部请假</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=343">招商银行合同审批表</a>
+          <a target="_blank">用印申请表</a>
         </div>
       </div>
+
       <div class="item item3">
         <span>
           教学服务
         </span>
         <div class="link">
-          <!-- <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=362">研究生休学、复学、新生保留入学资格、退学申请表</a> -->
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=348">献血申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=351">借户籍卡申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=344">培训项目审批表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=349">更改乘车区间</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=417">本科生请假审批表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=347">在校生在读证明</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=416">本科生复学、留级转专业、更改个人信息转单</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=346">补办学生证</a>
-           <!-- <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=418">本科生退学、转学、休学校内转单</a> -->
-	 			  <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=409">博士生导师信息采集</a>
-
+			<a target="_blank">用印申请表</a>
         </div>
       </div>
+
       <div class="item item4">
         <span>
           财务科研
         </span>
         <div class="link" style="display: none;">
-         <!-- <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=369">财务处新增，变更系统设置申请表</a>-->
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=393">纵向科研项目预支经费申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=323">科研经费预借票据申请表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=402">科研经费来款信息表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=355">科研经费预算调整备案表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=366">经费支付签字授权委托书</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=353">财务资料领用申请</a>
-        <!--  <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=365">科技成果转化现金奖励申请表</a>-->
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=367">调账申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=376">科研项目管理人变更申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=388">上缴结余经费申请表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=368">科研项目经费分卡申请表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=354">财务档案查阅申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=357">公务卡业务办理申请</a>
-        </div>
+			<a target="_blank">用印申请表</a>
+		</div>
       </div>
-      <div class="item item5">
-        <span>
-          人事服务
-        </span>
-        <div class="link" style="display: none;">
-           <a target="_blank" href="https://service.bupt.edu.cn/v2/matter/detail?id=374">在职证明申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/matter/detail?id=646">收入证明申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/matter/detail?id=391">职称证明申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/matter/detail?id=389">兼职申请</a>
-          <!--
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/matter/detail?id=413">高等学校教师职务任职资格申报（教授、副教授任职资格申报）</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/matter/detail?id=412">高等学校讲师职务资格申请</a>
-          -->
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/matter/detail?id=611">校内调动手续办理</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/matter/detail?id=607">教职工离职办理手续</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/matter/detail?id=373">非涉密一般教职工因私出国（境）申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/matter/detail?id=491">非教师岗位招聘需求申请表</a>
-        </div>
-      </div>
+
+
+
       <div class="item item6">
         <span>
-          外事服务
+          角色管理
         </span>
         <div class="link" style="display: none;">
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=385">普通教职工因公临时出国（赴港澳）申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=386">处级干部因公临时出国(赴港澳）申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=397">普通教职工因公赴台申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=396">处级干部因公临时赴台申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/matter/detail?id=532">回国报到</a>
-        </div>
+          <a target="_blank">修改角色</a>
+		  <a target="_blank">定义招商宇宙风格</a>
+		  <a target="_blank">观看招商宇宙短视频</a>
+		</div>
       </div>
       <div class="item item7">
         <span>
@@ -106,8 +56,7 @@
         </span>
         <div class="link" style="display: none;">
           <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=333">购置易制毒化学品申请表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=339">公用房装修改造申请</a>
-        </div>
+		</div>
       </div>
       <div class="item item8">
         <span>
@@ -115,19 +64,7 @@
         </span>
         <div class="link" style="display: none;">
           <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=322">网络域名申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=337">门户开通发布权限申请表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=335">开通单位短信服务申请表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=336">会议签到系统使用申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=342">虚拟机申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=352">数据共享申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=340">公用邮箱申请表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=341">网络信息服务申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=419">机房设备迁入(出)设备登记</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=451">网络服务大厅线上流程修改申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=452">修改一张表事项申请表</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=456">2022年信息化项目需求及预算申请</a>
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=321">电话业务办理申请</a>
-        </div>
+		</div>
       </div>
     </div>
 
