--- a/ZhouSiMin.html
+++ b/ZhouSiMin.html
@@ -14,27 +14,40 @@
       </div>
       
 	  <div class="item item2">
-        <span>党团服务</span>
+        <span>数字服务大厅</span>
         <div class="link">
-          <a target="_blank">用印申请表</a>
-        </div>
+          <a target="_blank">基础金融业务-转账/贷款/信用卡/查询</a>
+		  <a target="_blank">年度账单</a>
+		  <a target="_blank">针对学生的闲钱理财推荐、潮物购物消费</a>
+		  <a target="_blank">针对出国党的跨境金融服务</a>
+		  <a target="_blank">针对刚入职的萌新提供理财规划、消费信贷、信用卡</a>
+		  <a target="_blank">针对利用闲余时间兼职的用户收付款、资产管理</a>
+		</div>
       </div>
 
       <div class="item item3">
         <span>
-          教学服务
+			招商宇宙集市
         </span>
         <div class="link">
-			<a target="_blank">用印申请表</a>
+			<a target="_blank">随机掉落流星礼盒，如环球优惠券、视频软件会员、网红餐厅优惠价等等</a>
+			<a target="_blank">掌上商城入口</a>
+			<a target="_blank">生日祝福、节日限定服装</a>
+			<a target="_blank">积分兑换小招喵个性化换肤</a>
+			<a target="_blank">积分兑换分期优惠券</a>
+			<a target="_blank">积分申领定制银行卡卡面，如星座卡、冬奥主题卡、IP联名款、明日方舟</a>
+			<a target="_blank">随机掉落招商宇宙中独特装饰</a>
         </div>
       </div>
 
       <div class="item item4">
         <span>
-          财务科研
+			宇宙Party
         </span>
         <div class="link" style="display: none;">
-			<a target="_blank">用印申请表</a>
+			<a target="_blank">展示自己DIY的小招喵</a>
+			<a target="_blank">展示自己的理财感想</a>
+			<a target="_blank">展示自己在招行宇宙种草的商品</a>
 		</div>
       </div>
 
@@ -52,18 +65,14 @@
       </div>
       <div class="item item7">
         <span>
-          资产服务
+			设置
         </span>
         <div class="link" style="display: none;">
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=333">购置易制毒化学品申请表</a>
-		</div>
-      </div>
-      <div class="item item8">
-        <span>
-          信息服务
-        </span>
-        <div class="link" style="display: none;">
-          <a target="_blank" href="https://service.bupt.edu.cn/v2/service/detail?id=322">网络域名申请</a>
+          <a target="_blank">语言切换</a>
+		  <a target="_blank">修改小招喵形象、陪伴语音包、聊天模式</a>
+		  <a target="_blank">修改招行宇宙画风</a>
+		  <a target="_blank">清理缓存</a>
+		  <a target="_blank">关于招行宇宙</a>
 		</div>
       </div>
     </div>
